--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15
@@ -15,6 +13,11 @@ services:
       - pgdata:/var/lib/postgresql/data
     networks:
       - vendas-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   nest-api:
     build: .
@@ -27,9 +30,10 @@ services:
       - .env
     volumes:
       - .:/usr/src/app
+      - /usr/src/app/node_modules
     networks:
       - vendas-net
-    command: npm run start:dev
+    command: npm run start:dev -- --host 0.0.0.0
 
   seed:
     build: .
